# ur5e_ws

./: .gitignore  README.md
scripts/: launch_blade_preinsert_stack.sh  launch_blade_safety_monitor.sh  launch_ur5e_gazebo_gui.sh
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/config/: sim_occupancy_map_monitor.yaml  ur_controllers.yaml
src/Universal_Robots_ROS2_Gazebo_Simulation/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
src/ur5e_basic_motion/: CMakeLists.txt  README.md  package.xml
src/ur5e_basic_motion/launch/: basic_motion.launch.py
src/ur5e_basic_motion/src/: basic_motion.cpp
src/ur5e_blade_safety/: CMakeLists.txt  README.md  package.xml
src/ur5e_blade_safety/config/: blade_task_tuning.yaml
src/ur5e_blade_safety/data/: cavity_contour.csv
src/ur5e_blade_safety/include/ur5e_blade_safety/: contour_model.hpp
src/ur5e_blade_safety/launch/: cartesian_forward_probe.launch.py  opening_alignment_executor.launch.py  opening_insert_executor.launch.py  opening_monitor.launch.py
src/ur5e_blade_safety/rviz/: blade_monitor.rviz
src/ur5e_blade_safety/src/: blade_contour_safety.cpp  blade_motion_safety_interlock.cpp  cartesian_forward_probe.cpp  contour_model.cpp  opening_alignment_executor.cpp  opening_alignment_planner.cpp  opening_insert_executor.cpp
src/ur5e_cartesian_motion/: CMakeLists.txt  README.md  package.xml
src/ur5e_cartesian_motion/launch/: cartesian_draw.launch.py  cartesian_draw_loop.launch.py  cartesian_draw_loop_real.launch.py
src/ur5e_cartesian_motion/src/: cartesian_draw.cpp  cartesian_draw_loop.cpp
src/ur5e_curve_path/: CMakeLists.txt  README.md  package.xml
src/ur5e_curve_path/config/: kinematics.yaml
src/ur5e_curve_path/include/ur5e_curve_path/: config_utils.hpp  curve_path_node.hpp  ik_utils.hpp  orientation_utils.hpp  path_utils.hpp  trajectory_utils.hpp
src/ur5e_curve_path/launch/: curve_path_real.launch.py  curve_path_sim.launch.py
src/ur5e_curve_path/paths/: heart_path.csv
src/ur5e_curve_path/src/: config_utils.cpp  curve_path_main.cpp  curve_path_node.cpp  ik_utils.cpp  orientation_utils.cpp  path_utils.cpp  trajectory_utils.cpp
src/ur5e_custom_tool_description/: CMakeLists.txt  README.md  package.xml
src/ur5e_custom_tool_description/meshes/: Screwdriver.stl
src/ur5e_custom_tool_description/urdf/: screwdriver_tool.xacro  ur_with_screwdriver.urdf.xacro
src/ur5e_motion_cpp/: CMakeLists.txt  README.md  package.xml
src/ur5e_motion_cpp/src/: move_joints.cpp
src/ur5e_obstacle_motion/: CMakeLists.txt  README.md  package.xml
src/ur5e_obstacle_motion/launch/: obstacle_motion.launch.py
src/ur5e_obstacle_motion/src/: obstacle_motion.cpp
