<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ur5e_curve_path</name>
  <version>0.0.1</version>

  <description>
    UR5e Cartesian curve tracking with continuous IK and trapezoidal speed profile.
  </description>

  <maintainer email="peiboc2@example.com">
    Peibo
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>visualization_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>